--- a/10.Rmd
+++ b/10.Rmd
@@ -7,7 +7,7 @@ require(forecast)
 
 # 5.60
 
-$y_{t} = 25 + 0.6*y_{t-1} + 0.25*y_{t-2} + \epsilon_{t}$
+$$y_{t} = 25 + 0.6*y_{t-1} + 0.25*y_{t-2} + \epsilon_{t}$$
 
 ## a小題
 
@@ -49,7 +49,7 @@ $y_{t} = 25 + 0.6*y_{t-1} + 0.25*y_{t-2} + \epsilon_{t}$
 
 # 5.61
 
-$y_{t} = 40 + 0.4*\epsilon_{t-1} + \epsilon_{t}$
+$$y_{t} = 40 + 0.4*\epsilon_{t-1} + \epsilon_{t}$$
 
 ## a小題
 
@@ -88,7 +88,7 @@ $y_{t} = 40 + 0.4*\epsilon_{t-1} + \epsilon_{t}$
 
 # 5.62
 
-$y_{t} = 50 - 0.7*y_{t-1} + 0.5*\epsilon_{t-1} + \epsilon_{t}$
+$$y_{t} = 50 - 0.7*y_{t-1} + 0.5*\epsilon_{t-1} + \epsilon_{t}$$
 
 ## a小題
 
